Fix styles on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,36 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
   padding: 0, 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .card-board {
+  max-width: 960px;
   display: grid;
-  gap: 1em;
-  margin: auto;
+  gap: 0.5em;
 }
 
 .card-board.small {
-  grid-template-columns: repeat(2, min-content);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .card-board.normal {
-  grid-template-columns: repeat(3, min-content);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .card-board.big {
-  grid-template-columns: repeat(5, min-content);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .card {
-  width: 200px; /* adjust the width of the card div as needed */
-  height: 200px; /* adjust the height of the card div as needed */
+  width: auto;
+  height: auto;
+  aspect-ratio: 1/1;
   overflow: hidden;
 }
 
@@ -37,8 +40,14 @@
   object-fit: cover;
 }
 
+.start-buttons {
+  width: 90%;
+  max-width: 600px;
+}
+
 button {
-  margin: 0.5em 1em;
+  margin: 0.5em auto;
+  width: 100%;
 }
 
 .popup {
@@ -66,4 +75,19 @@ button {
 
 .popup button {
   margin-top: 10px;
+}
+
+footer {
+  background-color: lightgrey;
+  height: 50px;
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer > p {
+  margin: 0;
+  color: #1875c6;
 }
