--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #1875c6;
+  text-decoration: underline;
 }
 a:hover {
   color: #535bf2;
@@ -65,5 +65,24 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #1875c6;
+    background-color: #1b2124;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #434040;
+  }
+  .popup {
+    background-color: #242424;
+  }
+  footer {
+    background-color: #242424;
   }
 }
